--- a/com.dynamo.cr.common/.classpath
+++ b/com.dynamo.cr.common/.classpath
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="ext/slf4j/janino.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/slf4j/logback-classic-0.9.29.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/slf4j/logback-core-0.9.29.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/slf4j/slf4j-api-1.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jackson-core-asl-1.9.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jackson-mapper-asl-1.9.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-client-1.11.jar"/>
