--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -20,4 +20,8 @@ bin.includes = META-INF/,\
                ext/jackson-core-asl-1.9.2.jar,\
                ext/jackson-mapper-asl-1.9.2.jar,\
                ext/jersey-client-1.11.jar,\
-               ext/jersey-core-1.11.jar
+               ext/jersey-core-1.11.jar,\
+               ext/slf4j/janino.jar,\
+               ext/slf4j/logback-classic-0.9.29.jar,\
+               ext/slf4j/logback-core-0.9.29.jar,\
+               ext/slf4j/slf4j-api-1.6.1.jar
