--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -113,6 +113,8 @@
         <module>../com.dynamo.cr.sceneed.test</module>
         <module>../com.dynamo.cr.go</module>
         <module>../com.dynamo.cr.go.test</module>
+        <module>../com.dynamo.cr.dgit</module>
+        <module>../com.dynamo.cr.branchrepo</module>
         <module>../javax.media.opengl</module>
     </modules>
 
