--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -10,22 +10,14 @@ bin.includes = META-INF/,\
                ext/postgresql-9.0-801.jdbc4.jar,\
                ext/jetty-all-7.0.2.v20100331.jar,\
                ext/commons-codec-1.5.jar,\
-               ext/logback-classic-0.9.29.jar,\
-               ext/logback-core-0.9.29.jar,\
-               ext/slf4j-api-1.6.1.jar,\
                src/logback.xml,\
-               ext/janino.jar,\
                ext/grizzly-http-2.1.2.jar,\
                ext/grizzly-http-server-2.1.2.jar,\
                ext/jersey-client-1.11.jar,\
                ext/jersey-core-1.11.jar,\
                ext/jersey-grizzly2-1.11.jar,\
                ext/jersey-server-1.11.jar,\
-               ext/servlet-api-2.5.jar,\
                ext/grizzly-framework-2.1.2.jar,\
                ext/grizzly-http-servlet-2.1.2.jar,\
                ext/jersey-grizzly2-servlet-1.11.jar,\
-               ext/jersey-servlet-1.11.jar,\
-               ext/org.eclipse.jgit-1.2.0.201112221803-r.jar,\
-               ext/org.eclipse.jgit.http.server-1.2.0.201112221803-r.jar,\
-               ext/jsch-0.1.44-1.jar
+               ext/jersey-servlet-1.11.jar
