--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -115,6 +115,7 @@
         <module>../com.dynamo.cr.go.test</module>
         <module>../com.dynamo.cr.dgit</module>
         <module>../com.dynamo.cr.branchrepo</module>
+        <module>../com.dynamo.cr.builtins</module>
         <module>../javax.media.opengl</module>
     </modules>
 
