Engine bundle. case 628 * Bundle with executable for all platforms * Moved getPlatform to EditorCorePlugin

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -116,6 +116,7 @@
         <module>../com.dynamo.cr.dgit</module>
         <module>../com.dynamo.cr.branchrepo</module>
         <module>../com.dynamo.cr.builtins</module>
+        <module>../com.dynamo.cr.engine</module>
         <module>../javax.media.opengl</module>
     </modules>
 
