--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -24,4 +24,5 @@ bin.includes = META-INF/,\
                ext/slf4j/janino.jar,\
                ext/slf4j/logback-classic-0.9.29.jar,\
                ext/slf4j/logback-core-0.9.29.jar,\
-               ext/slf4j/slf4j-api-1.6.1.jar
+               ext/slf4j/slf4j-api-1.6.1.jar,\
+               DYNAMO_HOME/share/java/graphics.jar
