--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -117,6 +117,8 @@
         <module>../com.dynamo.cr.branchrepo</module>
         <module>../com.dynamo.cr.builtins</module>
         <module>../com.dynamo.cr.engine</module>
+        <module>../com.dynamo.cr.bob</module>
+        <module>../com.dynamo.cr.bob.test</module>
         <module>../javax.media.opengl</module>
     </modules>
 
